manifests/spring-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-demo
  labels:
    helm.sh/chart: ocp-deployment-0.1.9
    app.kubernetes.io/name: spring-demo
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: spring-demo
